crates/compiler/parser/tests/snapshots/parameterized__expressions::tuple_parameterized_err.snap
---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Input 1 (ERROR) ---
fn test() { (single_element, }
--- Diagnostics ---
[02] Error: found '}' expected '!', '-', something else, identifier, '[', '(', or ')'
   ╭─[ test.cairo:1:30 ]
   │
 1 │ fn test() { (single_element, }
   │                              ┬  
   │                              ╰── found '}' expected '!', '-', something else, identifier, '[', '(', or ')'
───╯
