crates/compiler/parser/tests/snapshots/parameterized__expressions::tuple_parameterized_ok.snap
---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Input 1 ---
fn test() { (1, 2, 3); }
--- AST ---
[
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test",
                    3..7,
                ),
                params: [],
                return_type: Spanned(
                    Tuple(
                        [],
                    ),
                    0..0,
                ),
                body: [
                    Spanned(
                        Expression(
                            Spanned(
                                Tuple(
                                    [
                                        Spanned(
                                            Literal(
                                                1,
                                                None,
                                            ),
                                            13..14,
                                        ),
                                        Spanned(
                                            Literal(
                                                2,
                                                None,
                                            ),
                                            16..17,
                                        ),
                                        Spanned(
                                            Literal(
                                                3,
                                                None,
                                            ),
                                            19..20,
                                        ),
                                    ],
                                ),
                                12..21,
                            ),
                        ),
                        12..22,
                    ),
                ],
            },
            0..24,
        ),
    ),
]
============================================================

--- Input 2 ---
fn test() { ((1, 2), (3, 4)); }
--- AST ---
[
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test",
                    3..7,
                ),
                params: [],
                return_type: Spanned(
                    Tuple(
                        [],
                    ),
                    0..0,
                ),
                body: [
                    Spanned(
                        Expression(
                            Spanned(
                                Tuple(
                                    [
                                        Spanned(
                                            Tuple(
                                                [
                                                    Spanned(
                                                        Literal(
                                                            1,
                                                            None,
                                                        ),
                                                        14..15,
                                                    ),
                                                    Spanned(
                                                        Literal(
                                                            2,
                                                            None,
                                                        ),
                                                        17..18,
                                                    ),
                                                ],
                                            ),
                                            13..19,
                                        ),
                                        Spanned(
                                            Tuple(
                                                [
                                                    Spanned(
                                                        Literal(
                                                            3,
                                                            None,
                                                        ),
                                                        22..23,
                                                    ),
                                                    Spanned(
                                                        Literal(
                                                            4,
                                                            None,
                                                        ),
                                                        25..26,
                                                    ),
                                                ],
                                            ),
                                            21..27,
                                        ),
                                    ],
                                ),
                                12..28,
                            ),
                        ),
                        12..29,
                    ),
                ],
            },
            0..31,
        ),
    ),
]
============================================================

--- Input 3 ---
fn test() { (single_element,); }
--- AST ---
[
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test",
                    3..7,
                ),
                params: [],
                return_type: Spanned(
                    Tuple(
                        [],
                    ),
                    0..0,
                ),
                body: [
                    Spanned(
                        Expression(
                            Spanned(
                                Tuple(
                                    [
                                        Spanned(
                                            Identifier(
                                                Spanned(
                                                    "single_element",
                                                    13..27,
                                                ),
                                            ),
                                            13..27,
                                        ),
                                    ],
                                ),
                                12..29,
                            ),
                        ),
                        12..30,
                    ),
                ],
            },
            0..32,
        ),
    ),
]
