crates/compiler/parser/tests/snapshots/parameterized__statements::array_creation_parameterized_err.snap
---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Input 1 (ERROR) ---
fn test() { let arr: [felt] = [1, 2, 3]; }
--- Diagnostics ---
[02] Error: found ']' expected '*', or ';'
   ╭─[ test.cairo:1:27 ]
   │
 1 │ fn test() { let arr: [felt] = [1, 2, 3]; }
   │                           ┬  
   │                           ╰── found ']' expected '*', or ';'
───╯

============================================================

--- Input 2 (ERROR) ---
fn test() { let arr: [3] = [1, 2, 3]; }
--- Diagnostics ---
[02] Error: found '3' expected identifier, '[', or '('
   ╭─[ test.cairo:1:23 ]
   │
 1 │ fn test() { let arr: [3] = [1, 2, 3]; }
   │                       ┬  
   │                       ╰── found '3' expected identifier, '[', or '('
───╯
